add controller for admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jackson.serialization.fail-on-empty-beans=false
 hibernate.discriminator.ignore_explicit_for_joined=true
 logging.level.com.jumia.test.jumia=DEBUG
+spring.main.allow-bean-definition-overriding=true
