--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=${port:12000}
 #spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/jumia-db?serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=ossas
+spring.datasource.password=1111
 #
 ## Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
@@ -12,7 +12,7 @@ spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 #
 ## Possible values : create, update, create-drop
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 #
 ## Naming strategy
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
